# backend-demo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  agents.html  docker-compose.yml  parse_agents.py
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251117_073031_create_users_table.rs
src/: config.rs  main.rs  state.rs
src/db/: connection.rs
src/handlers/: auth_handler.rs  user_handler.rs
src/middleware/: auth_middleware.rs
src/models/: user.rs
src/routes/: mod.rs  user_routes.rs
src/services/: user_service.rs
src/utils/: auth_utils.rs  jwt.rs  mod.rs
