[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "migration",
]
resolver = "2"

[dependencies]
actix-web = "4.12.0"
#tokio = { version = "1.48.0", features = ["full"] }
#sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sea-orm = { version = "2.0.0-rc.18", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
argon2 = "0.5.3"
rand_core = "0.6"
