[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "migration",
]
resolver = "2"

[dependencies]
actix-web = "4.12.0"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sea-orm = { version = "2.0.0-rc.18", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "mock"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde_json = "1.0"
